--- a/public/index.html
+++ b/public/index.html
@@ -52,7 +52,7 @@
                     <div class="header-nav service">
                         <span>
                             DỊCH VỤ
-                        <i class="fa-solid fa-play"></i>
+                            <i class="fa-solid fa-play"></i>
                         </span>
                         <div class="drop-content">
                             <div class="content-service">
@@ -72,9 +72,9 @@
                             </div>
                         </div>
                     </div>
-                        
+
                     <div class="header-nav promotion">
-                        <a  href="./navigation/promotion.html">
+                        <a href="./navigation/promotion.html">
                             KHUYẾN MÃI
                         </a>
                     </div>
@@ -85,7 +85,7 @@
                         <div class="submenu-login">
                             <ion-icon name="caret-up-sharp"></ion-icon>
                             <div class="menu-login">
-                                <a href="./login.php">
+                                <a class="loginstatus status" href="#">
                                     Đăng nhập
                                 </a>
                                 <a href="./navigation/information_account.html">
@@ -94,6 +94,9 @@
                                 <a href="./navigation/information_card_TS.html">
                                     Lịch tập
                                 </a>
+                                <button class="logoutstatus status" type="submit">
+                                    ĐĂNG XUẤT
+                                </button>
                             </div>
                         </div>
                     </div>
@@ -104,16 +107,16 @@
                     </button>
                     <div class="content">
                         <div class="account">
-                            <div class="account-wrapper">
+                            <div class="menu2-infor account-wrapper" id="menu2-infor">
                                 <div class="account-avt">
                                     <img src="./img/icon/avatar.png" alt="">
                                 </div>
                                 <div class="account-ifm">
                                     <p class="account-fullname">
-                                       full name
+                                        full name
                                     </p>
                                     <p class="account-code">
-                                       acc001
+                                        acc001
                                     </p>
                                 </div>
                             </div>
@@ -161,7 +164,7 @@
                                     Huấn luyện viên
                             </a>
                             <div class="content-logout">
-                                <a class="content-inner logout">
+                                <a class="content__logout__btn content-inner logout">
                                     <!-- <i class='bx bx-code-alt'></i> -->
                                     <i class="bxf fa-solid fa-right-from-bracket"></i>
                                     <span class="content-text">
