--- a/public/navigation/card.html
+++ b/public/navigation/card.html
@@ -89,6 +89,9 @@
                                 <a href="../navigation/information_card_TS.html">
                                     Lịch tập
                                 </a>
+                                <button class="logoutstatus status" type="submit">
+                                    ĐĂNG XUẤT
+                                </button>
                             </div>
                         </div>
                     </div>
@@ -99,7 +102,7 @@
                     </button>
                     <div class="content">
                         <div class="account">
-                            <div class="account-wrapper">
+                            <div class="menu2-infor account-wrapper" id="menu2-infor">
                                 <div class="account-avt">
                                     <img src="../img/icon/avatar.png" alt="">
                                 </div>
@@ -156,7 +159,7 @@
                                     Huấn luyện viên
                             </a>
                             <div class="content-logout">
-                                <a class="content-inner logout">
+                                <a class="content__logout__btn content-inner logout">
                                     <!-- <i class='bx bx-code-alt'></i> -->
                                     <i class="bxf fa-solid fa-right-from-bracket"></i>
                                     <span class="content-text">
