--- a/public/navigation/personal_trainer.html
+++ b/public/navigation/personal_trainer.html
@@ -81,7 +81,7 @@
                         <div class="submenu-login">
                             <ion-icon name="caret-up-sharp"></ion-icon>
                             <div class="menu-login">
-                                <a href="#">
+                                <a class="loginstatus status" href="#">
                                     Đăng nhập
                                 </a>
                                 <a href="../navigation/information_account.html">
@@ -90,6 +90,9 @@
                                 <a href="../navigation/information_card_TS.html">
                                     Lịch tập
                                 </a>
+                                <button class="logoutstatus status" type="submit">
+                                    ĐĂNG XUẤT
+                                </button>
                             </div>
                         </div>
                     </div>
@@ -100,7 +103,7 @@
                     </button>
                     <div class="content">
                         <div class="account">
-                            <div class="account-wrapper">
+                            <div class="menu2-infor account-wrapper" id="menu2-infor">
                                 <div class="account-avt">
                                     <img src="../img/icon/avatar.png" alt="">
                                 </div>
@@ -157,7 +160,7 @@
                                     Huấn luyện viên
                             </a>
                             <div class="content-logout">
-                                <a class="content-inner logout">
+                                <a class="content__logout__btn content-inner logout">
                                     <!-- <i class='bx bx-code-alt'></i> -->
                                     <i class="bxf fa-solid fa-right-from-bracket"></i>
                                     <span class="content-text">
