--- a/public/index.html
+++ b/public/index.html
@@ -94,9 +94,9 @@
                                 <a href="./navigation/information_card_TS.html">
                                     Lịch tập
                                 </a>
-                                <button class="logoutstatus status" type="submit">
+                                <a class="logoutstatus status">
                                     ĐĂNG XUẤT
-                                </button>
+                                </a>
                             </div>
                         </div>
                     </div>
@@ -213,7 +213,7 @@
                 <div class="chat-screen">
                     <div class="chat-history">
                         <div class="chat-log">
-                            <div class="message admin">
+                            <!-- <div class="message admin">
                                 <span class="admin-img">
                                     <img src="./img/icon/closeAi.jpg" alt="">
                                 </span>
@@ -260,7 +260,7 @@
                                 <p class="message-text">
                                     wwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwww
                                 </p>
-                            </div>
+                            </div> -->
                         </div>
                     </div>
                     <div class="chat-input">
@@ -958,9 +958,11 @@
 
 
     <div class="nen_mo"></div>
+    <script src="/socket.io/socket.io.js"></script>
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="./navigation_javascript/menu.js"></script>
-    <script src="./navigation_javascript/processChatBox.js"></script>
+    <script type="module" src="./navigation_javascript/processChatBox.js"></script>
     <script type="module" src="./index.js"></script>
     <script type="module" src="./navigation_javascript/login.js"></script>
     <script type="module" src="./src/validate.js"></script>
