--- a/public/navigation/information_card_TS.html
+++ b/public/navigation/information_card_TS.html
@@ -87,9 +87,9 @@
                                     Lịch tập
                                 </a>
                                 
-                                <button class="logoutstatus status" type="submit">
+                                <a class="logoutstatus status" type="submit">
                                     ĐĂNG XUẤT
-                                </button>
+                                </a>
                             </div>
                         </div>
                     </div>
