--- a/public/navigation/promotion.html
+++ b/public/navigation/promotion.html
@@ -83,9 +83,9 @@
                                 <a href="../navigation/information_card_TS.html">
                                     Lịch tập
                                 </a>
-                                <button class="logoutstatus status" type="submit">
+                                <a class="logoutstatus status" type="submit">
                                     ĐĂNG XUẤT
-                                </button>
+                                </a>
                             </div>
                         </div>
                     </div>
