--- a/public/navigation/card.html
+++ b/public/navigation/card.html
@@ -879,6 +879,8 @@
         </div>
     </div>
     <div class="nen_mo"></div>
+    <script src="/socket.io/socket.io.js"></script>
+
     <script type="module" src="../navigation_javascript/menu.js"></script>
     <script type="module" src="../navigation_javascript/processChatBox.js"></script>
     <script type="module" src="../src/toast.js"></script>
