--- a/public/navigation/personal_trainer.html
+++ b/public/navigation/personal_trainer.html
@@ -1298,7 +1298,7 @@
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
     <script type="module" src="../src/toast.js"></script>
     <script src="../navigation_javascript/menu.js"></script>
-    <script src="../navigation_javascript/processChatBox.js"></script>
+    <script type="module" src="../navigation_javascript/processChatBox.js"></script>
     <script src="/navigation_javascript/personal_trainer.js"></script>
 
     
