--- a/public/navigation/promotion.html
+++ b/public/navigation/promotion.html
@@ -744,9 +744,11 @@
             </div>
         </div>
     </div>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="../navigation_javascript/menu.js"></script>
     <script src="../navigation_javascript/processChatBox.js"></script>
     <script src="../navigation_javascript/promotion.js"></script>
+    
 </body>
 
 </html>
