shop load item from database

--- a/public/index.html
+++ b/public/index.html
@@ -61,7 +61,7 @@
                                 </a>
                             </div>
                             <div class="content-service">
-                                <a href="./navigation/shop.html">
+                                <a href="./navigation/wheyshop.html">
                                     CỬA HÀNG WHEY
                                 </a>
                             </div>
@@ -146,7 +146,7 @@
                                     Chat online
                                 </span>
                             </a>
-                            <a class="content-inner" href="./navigation/shop.html">
+                            <a class="content-inner" href="./navigation/wheyshop.html">
                                 <i class="fa-solid fa-cart-shopping"></i>
                                 <span class="content-text">
                                     Cửa hàng
@@ -960,6 +960,8 @@
     <div class="nen_mo"></div>
     <script src="/socket.io/socket.io.js"></script>
 
+    <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="./navigation_javascript/menu.js"></script>
     <script type="module" src="./navigation_javascript/processChatBox.js"></script>
