--- a/public/navigation/card.html
+++ b/public/navigation/card.html
@@ -16,6 +16,7 @@
     <link rel="stylesheet" href="../navigation_css/login.css">
     <link rel="stylesheet" href="../navigation_css/toast.css">
     <link rel="stylesheet" href="../navigation_css/information_card_TS.css">
+    <link rel="stylesheet" href="../css/styles.css">
 
     <title>GYMZ - Thể hình giới trẻ</title>
 
