add shop page admin

--- a/public/navigation/information_account.html
+++ b/public/navigation/information_account.html
@@ -24,14 +24,14 @@
     <div class="app">
         <div class="header">
             <div class="header-wrapper">
-                <div class="header-logo">
+                <a class="header-logo" href="../index.html">
                     <h1>
                         GYM
                         <span>
                             Z
                         </span>
                     </h1>
-                </div>
+                </a>
                 <div class="header-nav-bar">
                     <div class="header-nav home">
                         <a href="../index.html">
@@ -207,54 +207,6 @@
                 <div class="chat-screen">
                     <div class="chat-history">
                         <div class="chat-log">
-                            <div class="message admin">
-                                <span class="admin-img">
-                                    <img src="../img/icon/closeAi.jpg" alt="">
-                                </span>
-                                <p class="message-text">
-                                    xin chào, em là trợ lý hỗ trợ mình !
-                                </p>
-                            </div>
-                            <div class="message customer">
-                                <p class="message-text">
-                                    hướng dẫn mình thanh toán online.
-                                    hướng dẫn mình thanh toán online.
-                                    hướng dẫn mình thanh toán online.
-                                    hướng dẫn mình thanh toán online.
-                                    hướng dẫn mình thanh toán online.
-                                    hướng dẫn mình thanh toán online.
-                                    hướng dẫn mình thanh toán online.
-                                    hướng dẫn mình thanh toán online.
-                                    hướng dẫn mình thanh toán online.
-                                    hướng dẫn mình thanh toán online.
-                                    hướng dẫn mình thanh toán online.
-                                    hướng dẫn mình thanh toán online.
-                                    hướng dẫn mình thanh toán online.
-                                    hướng dẫn mình thanh toán online.
-                                    hướng dẫn mình thanh toán online.
-                                </p>
-                            </div>
-                            <div class="message customer">
-                                <p class="message-text">
-                                    wwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwww
-                                </p>
-                            </div>
-                            <div class="message admin">
-                                <span class="admin-img">
-                                    <img src="../img/icon/closeAi.jpg" alt="">
-                                </span>
-                                <p class="message-text">
-                                    wwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwww
-                                </p>
-                            </div>
-                            <div class="message admin">
-                                <span class="admin-img">
-                                    <img src="../img/icon/closeAi.jpg" alt="">
-                                </span>
-                                <p class="message-text">
-                                    wwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwww
-                                </p>
-                            </div>
                         </div>
                     </div>
                     <div class="chat-input">
@@ -967,7 +919,7 @@
 
     <script type="module" src="../src/toast.js"></script>
     <script src="../navigation_javascript/menu.js"></script>
-    <script src="../navigation_javascript/processChatBox.js"></script>
+    <script type="module" src="../navigation_javascript/processChatBox.js"></script>
     <script type="module" src="../src/client.js"></script>
 </body>
 
