--- a/public/navigation/information_card_TS.html
+++ b/public/navigation/information_card_TS.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="../navigation_css/toast.css">
     <link rel="stylesheet" href="../navigation_css/information_card_TS.css">
     <link rel="stylesheet" href="../navigation_css/login.css">
+    <link rel="stylesheet" href="../css/styles.css">
     <title>GYMZ - Thể hình giới trẻ</title>
 
 </head>
@@ -206,54 +207,6 @@
                 <div class="chat-screen">
                     <div class="chat-history">
                         <div class="chat-log">
-                            <div class="message admin">
-                                <span class="admin-img">
-                                    <img src="../img/icon/closeAi.jpg" alt="">
-                                </span>
-                                <p class="message-text">
-                                    xin chào, em là trợ lý hỗ trợ mình !
-                                </p>
-                            </div>
-                            <div class="message customer">
-                                <p class="message-text">
-                                    hướng dẫn mình thanh toán online.
-                                    hướng dẫn mình thanh toán online.
-                                    hướng dẫn mình thanh toán online.
-                                    hướng dẫn mình thanh toán online.
-                                    hướng dẫn mình thanh toán online.
-                                    hướng dẫn mình thanh toán online.
-                                    hướng dẫn mình thanh toán online.
-                                    hướng dẫn mình thanh toán online.
-                                    hướng dẫn mình thanh toán online.
-                                    hướng dẫn mình thanh toán online.
-                                    hướng dẫn mình thanh toán online.
-                                    hướng dẫn mình thanh toán online.
-                                    hướng dẫn mình thanh toán online.
-                                    hướng dẫn mình thanh toán online.
-                                    hướng dẫn mình thanh toán online.
-                                </p>
-                            </div>
-                            <div class="message customer">
-                                <p class="message-text">
-                                    wwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwww
-                                </p>
-                            </div>
-                            <div class="message admin">
-                                <span class="admin-img">
-                                    <img src="../img/icon/closeAi.jpg" alt="">
-                                </span>
-                                <p class="message-text">
-                                    wwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwww
-                                </p>
-                            </div>
-                            <div class="message admin">
-                                <span class="admin-img">
-                                    <img src="../img/icon/closeAi.jpg" alt="">
-                                </span>
-                                <p class="message-text">
-                                    wwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwww
-                                </p>
-                            </div>
                         </div>
                     </div>
                     <div class="chat-input">
@@ -1192,14 +1145,14 @@
     <div class="nen_mo"></div>
     <script src="/socket.io/socket.io.js"></script>
 
-    <script src="../navigation_javascript/menuv2.js"></script>
     <script src="../navigation_javascript/menu.js"></script>
-    <script src="../navigation_javascript/processChatBox.js"></script>
+    <script type="module" src="../navigation_javascript/processChatBox.js"></script>
     <script type="module" src="../src/toast.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script type="module" src="../src/client.js"></script>
     <script type="module" src="../navigation_javascript/login.js"></script>
     <script type="module" src="../navigation_javascript/infomation_account.js"></script>
+    <!-- <script type="module" src="../navigation_javascript/chatbox.js"></script> -->
 </body>
 
 </html>
