--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="./img/icon/logo.png" type="image/x-icon">
     <meta charset="UTF-8">
-    <script src="/socket.io/socket.io.js"></script>
+    <!-- <script src="/socket.io/socket.io.js"></script> -->
     <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -301,8 +301,8 @@
             <!-- NGO GIA QUYEN -->
             <div class="container__home">
                 <div class="video-title">
-                    <video autoplay loop muted playsinline>
-                        <source src="./video/video.mp4" type="video/mp4" />
+                    <video autoplay loop muted playsinline> 
+                        <!-- <source src="./video/video.mp4" type="video/mp4" /> -->
                     </video>
                 </div>
                 <div class="home__about">
